--- a/spe_blog/templates/spe_blog/plugins/brief_interest.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_interest.html
@@ -1,4 +1,4 @@
-{% load i18n cms_tags sekizai_tags %}
+{% load i18n cms_tags sekizai_tags bleachall %}
 
 {% if articles.count > 1 %}
     <div class="row greyback briefofinterest">
