--- a/spe_blog/templates/spe_blog/plugins/brief_interest.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_interest.html
@@ -21,9 +21,10 @@
             <div class="col-sm-9 poiblurb">
                 <h3>{{ article.title }}</h3>
                 {% if article.article_text %}
-                    <p>{{ article.article_text | bleachall | slice:":100" | safe }}</p>
+                    <p>{{ article.article_text | bleachall | slice:":100" | safe }}...</p>
                 {% endif %}
             </div>
+            <div class="more">Read More...</div>
         </div>
     </a>
     </article>
