--- a/mainsite/static/ogf/css/mainstyle.css
+++ b/mainsite/static/ogf/css/mainstyle.css
@@ -496,3 +496,6 @@ table th, table td { padding: 5px; }
 .sponsored { padding: 3px 3px 3px 5px; background-color: #fffb22; color: #2a2a2a; font-weight: 700; font-size: 12px; letter-spacing: 2px; }
 
 .cke_maximized { margin-top: 50px !important; }
+
+.more { position: absolute; right: 20px; bottom: 20px; color: #2a2a2a; }
+.more:hover { color: #808bcf; }
