--- a/mainsite/static/ogf/css/mainstyle.css
+++ b/mainsite/static/ogf/css/mainstyle.css
@@ -499,3 +499,8 @@ table th, table td { padding: 5px; }
 
 .more { position: absolute; right: 20px; bottom: 20px; color: #2a2a2a; }
 .more:hover { color: #808bcf; }
+
+.see-all-div { margin: 15px 0; padding: 0; }
+
+.see-all { font-size: 15px; font-weight: 700; color: #26416c; }
+.see-all:hover { color: #808bcf; }
