--- a/spe_blog/templates/spe_blog/plugins/issue_channel.html
+++ b/spe_blog/templates/spe_blog/plugins/issue_channel.html
@@ -22,5 +22,5 @@
 {% endfor %}
 
 {% if show_all_url and show_all_text %}
-    <a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span></a>
+    <div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span></a></div>
 {% endif %}
