--- a/mainsite/static/ogf/css/mainstyle.scss
+++ b/mainsite/static/ogf/css/mainstyle.scss
@@ -89,9 +89,11 @@ a {
     color:            $col-ogfbluehover;
   }
 }
+
 .see-all-div {
   margin:             15px 0;
-  padding:            0;
+  padding:            10px 0 0 0;
+  border-top:         1px solid $col-ogfnotsolightgrey;
 }
 .see-all {
   font-size:          15px;
@@ -100,5 +102,9 @@ a {
 
   &:hover {
     color:            $col-ogfbluehover;
+  }
+
+  i {
+    margin-left:      25px;
   }
 }
