--- a/spe_blog/templates/spe_blog/plugins/picture_with_text_below_full.html
+++ b/spe_blog/templates/spe_blog/plugins/picture_with_text_below_full.html
@@ -30,6 +30,6 @@
 {% endfor %}
 
 {% if show_all_url and show_all_text %}
-    <div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span></a></div>
+            <div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div>
 {% endif %}
 </div>
