--- a/mainsite/templates/ogf_home.html
+++ b/mainsite/templates/ogf_home.html
@@ -4,6 +4,11 @@
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
 {% block content %}
+    <div class="row topArea content-area padZero">
+        <div class="col-xs-12 col-lg-10 col-lg-offset-1">
+            {% placeholder "Title Area" %}
+        </div>
+    </div>
     <div class="row content-area">
 
         <div class="col-xs-12 col-sm-8 col-lg-7 col-lg-offset-1 featurecol">
