--- a/spe_blog/templates/spe_blog/plugins/topics_list.html
+++ b/spe_blog/templates/spe_blog/plugins/topics_list.html
@@ -1,21 +1,23 @@
 {% load cms_tags sekizai_tags divideby %}
 
 {% block content %}
-    <div class="tile row">
+    <div class="tile row topicListBox">
     {% if topics %}
 {#        <p>COUNT: {{ topics.count }}</p>#}
 
 
-        <div class="col-sm-6">
+        <div class="col-sm-6 topicListColumnL">
         {% for topic in topics %}
 
-            <a href="{{ publication.get_absolute_topics_url }}?topic={{ topic.id }}">
-                <p>{{ topic.name }}</p>
-            </a>
+            <div class="topicListItem">
+                <a href="{{ publication.get_absolute_topics_url }}?topic={{ topic.id }}">
+                    <p>{{ topic.name }}</p>
+                </a>
+            </div>
 
             {% if forloop.counter == topics.count|divideby:2 %}
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6 topicListColumnR">
             {% endif %}
 
         {% endfor %}
