More misc fixes
Including last minute stuff from Glenda

--- a/mainsite/static/ogf/css/mainstyle.scss
+++ b/mainsite/static/ogf/css/mainstyle.scss
@@ -116,3 +116,17 @@ a {
     margin-left:      25px;
   }
 }
+
+@media print {
+  body * {
+    visibility: hidden;
+  }
+  #printMe, #printMe * {
+    visibility: visible;
+  }
+  #printMe {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+}
