--- a/spe_blog/templates/spe_blog/plugins/brief_index.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_index.html
@@ -1,7 +1,7 @@
 {% load cms_tags sekizai_tags bleachall %}
 
 {% block content %}
-    <div class="row tile">
+    <div class="row tile padZero">
     {% if articles %}
         {% for article in articles %}
 
