--- a/mainsite/static/ogf/css/_tiles.scss
+++ b/mainsite/static/ogf/css/_tiles.scss
@@ -128,6 +128,14 @@
     }
   }
 }
+.poi-date {
+  color:            $col-red;
+  display:          block;
+  text-transform:   uppercase;
+  font-size:        10px !important;
+  font-weight:      700;
+  letter-spacing:   1px;
+}
 .featured-story {
   padding:              0;
   min-height:           360px;
@@ -151,6 +159,9 @@
       }
     }
   }
+}
+.story-text {
+      min-height:       175px;
 }
 .tile-editorial {
   background-color:     $col-ogfblack;
