--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -32,7 +32,7 @@
 
                 {% if article.show_paybox %}
                     <div class="col-sm-12 becomeMember text-center">
-                        <p>You are have access to this full article to experience the outstanding content that is available to OGF subscibers and SPE members.</p>
+                        <p>You have access to this full article to experience the outstanding content that is available to OGF subscibers and SPE members.</p>
                         <p>Please <a href="">JOIN SPE</a> or <a href="">Subscribe to OGF</a></br>
                             in order to gain full access to the rest that OGF has to offer.</p>
                 </div>
