--- a/mainsite/static/ogf/css/mainstyle.css
+++ b/mainsite/static/ogf/css/mainstyle.css
@@ -315,14 +315,12 @@ table tbody { border-color: #f2efea; }
 table th { background-color: #181c41; color: white; }
 table th, table td { padding: 5px; }
 
-.topicListBox, .topicListColumnL, .topicListColumnR { padding: 0 !important; }
+.topicListBox, .topicListColumnL, .topicListColumnR, .topicListColumnOne { padding: 0 !important; }
 
 .topicListBox { background-color: #f2efea; border-top: 5px solid #bf1d21; }
-.topicListBox .topicListItem { border-bottom: 1px dotted #b4b4b9; border-right: 1px dotted #b4b4b9; padding: 10px; }
+.topicListBox .topicListItem { border: 1px dotted #b4b4b9; padding: 10px; }
 .topicListBox .topicListItem:hover { background-color: #e4e1d8; }
 .topicListBox .topicListItem p { margin: 0; }
-
-.topicListColumnL .topicListItem { border-left: 1px dotted #b4b4b9; }
 
 /* =================================================================== */
 /* TILES & BOXES
