--- a/mainsite/static/ogf/css/_tiles.scss
+++ b/mainsite/static/ogf/css/_tiles.scss
@@ -221,7 +221,7 @@
 
   .issueThumb {
     min-height:         150px;
-    padding:            0;
+    padding:            0 10px 10px 0;
   }
   .pub-date, .volume, .number {
     font-weight:        $font-bold;
