--- a/spe_blog/templates/spe_blog/plugins/brief_interest.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_interest.html
@@ -45,13 +45,13 @@
     <p class="well">{% trans "No items available" %}</p>
 {% endfor %}
 
-{% if show_all_url and show_all_text %}
-            <div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div>
-{% endif %}
-
 {% if articles.count > 1 %}
     </div>
     <div class="row dottedSpacer"></div>
+{% endif %}
+
+{% if show_all_url and show_all_text %}
+            <div class="row"><div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
 {% endif %}
 
 {% addtoblock "js" %}
