--- a/spe_blog/templates/spe_blog/plugins/picture_with_text_below.html
+++ b/spe_blog/templates/spe_blog/plugins/picture_with_text_below.html
@@ -27,6 +27,7 @@
                         {% endif %}
 
                         <p>{{ article.teaser }}</p>
+                        <div class="whitefadebottom"></div>
                     </div>
                 </div>
             </a>
@@ -37,7 +38,7 @@
         {% endfor %}
 
         {% if show_all_url and show_all_text %}
-            <div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div>
+            <div class="row"><div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
         {% endif %}
 {% if articles.count > 1 %}
     </div>
