Color picker to Editorial templates

--- a/mainsite/static/jpt/css/mainstyle.css
+++ b/mainsite/static/jpt/css/mainstyle.css
@@ -1,5 +1,5 @@
 /* =================================================================== */
-/* MAIN STYLE SHEET FOR jpt
+/* MAIN STYLE SHEET FOR JPT
 ====================================================================== */
 /* =================================================================== */
 /* VARIABLES
