--- a/spe_blog/templates/spe_blog/plugins/editorial.html
+++ b/spe_blog/templates/spe_blog/plugins/editorial.html
@@ -3,7 +3,7 @@
 {% for editorial in editorials %}
     {% if forloop.first %}
         <a href={{ link }}>
-        <div class="tile-editorial row">
+        <div class="tile-editorial row" style="background-color:{{ backcol }}">
             <div class="col-xs-12 title1">{{ editorial.title_main }}</div>
             <div class="col-xs-12 dottedspacer">&nbsp;</div>
             <div class="col-xs-12 title2">{{ editorial.title_sub }}</div>
