--- a/spe_blog/templates/spe_blog/plugins/side_list.html
+++ b/spe_blog/templates/spe_blog/plugins/side_list.html
@@ -1,6 +1,6 @@
 {% load i18n cms_tags sekizai_tags %}
 
-<div class="tile-editorial row">
+<div class="tile-editorial row" style="background-color:{{ backcol }}">
 {#    <div class="col-xs-12 sideListBoxTitle">#}
 {#        THIS IS THE TITLE#}
 {#    </div>#}
