--- a/mainsite/templates/ogf_base.html
+++ b/mainsite/templates/ogf_base.html
@@ -6,12 +6,15 @@
 {{ block.super }}
     <script src="https://use.typekit.net/xwk3nys.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
+{#    {% include 'spectrumjs.html' %}#}
+
 {% endblock web_fonts %}
 
 {% block css_base %}
     {% load staticfiles %}
     <!-- CSS_BASE -->
     <link rel="stylesheet" type="text/css" media="all" href="{% static 'ogf/css/mainstyle.css' %}" />
+{#    <link rel="stylesheet" type="text/css" media="all" href="{% static 'ogf/css/spectrum.css' %}" />#}
 {% endblock css_base %}
 
 {% block wrap_begin %}<div class="container-fluid">{% endblock wrap_begin %}
