--- a/spe_blog/templates/spe_blog/plugins/side_feature.html
+++ b/spe_blog/templates/spe_blog/plugins/side_feature.html
@@ -5,7 +5,7 @@
 {#    in this template, only pull the first article in the list   #}
     {% if forloop.first %}
         <a href={{ article.get_absolute_url}}>
-        <div class="tile-editorial row">
+        <div class="tile-editorial row" style="background-color:{{ backcol }}">
 
             {# if there is a featured picture for the article, show it #}
             {% if article.picture and article.picture.url %}
