--- a/spe_blog/templates/spe_blog/plugins/brief_index.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_index.html
@@ -43,5 +43,9 @@
         <p>No article available. Sorry.</p>
     {% endif %}
 
+    {% if show_all_url and show_all_text %}
+        <div class="row"><div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
+    {% endif %}
+
     </div>
 {% endblock content %}
