marketo form spacing

--- a/spe_blog/templates/spe_blog/plugins/marketo_form.html
+++ b/spe_blog/templates/spe_blog/plugins/marketo_form.html
@@ -1,6 +1,6 @@
 {% load i18n cms_tags sekizai_tags %}
 
-<div>
+<div class="marketoForm">
 {{ instructions }}
 
 <script src="//app-sj05.marketo.com/js/forms2/js/forms2.min.js"></script>
