Updated Article boxes not flowing correctly

--- a/mainsite/static/ogf/css/_tiles.scss
+++ b/mainsite/static/ogf/css/_tiles.scss
@@ -163,7 +163,7 @@
 }
 
 .story-text {
-      height:           175px;
+      //height:           175px;
       overflow:         hidden;
 }
 .whitefadebottom {
