--- a/spe_blog/templates/spe_blog/plugins/picture_with_text_below.html
+++ b/spe_blog/templates/spe_blog/plugins/picture_with_text_below.html
@@ -32,6 +32,12 @@
                 </div>
             </a>
             </article>
+
+            {% if forloop.counter|divisibleby:2 %}
+                </div>
+                <div class="row">
+            {% endif %}
+
         {#    {% endif %}#}
         {% empty %}
             <p class="well">{% trans "No items available" %}</p>
