Fixed Join now messages & Image attribution display for Featured images

--- a/mainsite/templates/include_article_shares.html
+++ b/mainsite/templates/include_article_shares.html
@@ -26,6 +26,10 @@
                     <i class="fa fa-envelope-square"></i>
                 </a>
 
+                <a href="javascript:window.print()">
+                    <i class="fa fa-print" aria-hidden="true"></i>
+                </a>
+
 
 {#            {% endwith %}#}
 
