--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -1,99 +1,104 @@
 {% load cms_tags sekizai_tags tz %}
 
-    <div class="row articleDetail">
-        <div class="col-sm-12 articleTitleBox">
+<div class="row articleDetail">
+    <div class="col-sm-12 articleTitleBox">
 {#            <h1 class="articleTitle">{{ article.title }}</h1>#}
-            <hr class="tiletitlehr">
-            <h1 class="tiletitles">{{ article.title }}</h1>
-            <div class="col-sm-12 tiletitlehr"></div>
-            <div class="col-sm-8 articleAuthorBox">
-                {% if article.author %}{{ article.author }} | {% endif %}{{ article.date|date:"d F Y" }}
-            </div>
-            <div class="col-sm-4 articleShares text-right">
-                {% include 'include_article_shares.html' %}
-            </div>
-            <div class="col-xs-12 dottedSpacer"></div>
+        <hr class="tiletitlehr">
+        <h1 class="tiletitles">{{ article.title }}</h1>
+        <div class="col-sm-12 tiletitlehr"></div>
+        <div class="col-sm-8 articleAuthorBox">
+            {% if article.author %}{{ article.author }} | {% endif %}{{ article.date|date:"d F Y" }}
         </div>
-
-        {% if article.sponsored == True %}
-            <div class="col-sm-12 sponsored">SPONSORED</div>
-        {% endif %}
-
-    {% if article.picture and article.picture.url %}
-        <div class="col-sm-12 articlePicture">
-            <img src="{{article.picture.url}}" alt="{{article.alternate}}" class="img-responsive">
-        </div>
-    {% endif %}
-
-        <div class="col-sm-12 articleBodyText">
-
-
-            {% if article.is_readable == True %}
-
-                {% if article.show_paybox %}
-                    <div class="col-sm-12 becomeMember text-center">
-                        <p>You have access to this full article to experience the outstanding content that is available to OGF subscibers and SPE members.</p>
-                        <p>Please <a href="">JOIN SPE</a> or <a href="">Subscribe to OGF</a></br>
-                            in order to gain full access to the rest that OGF has to offer.</p>
-                </div>
-                {% endif %}
-
-                {{ article.article_text | safe }}
-
-            {% else %}
-
-
-                {{ article.introduction | safe }}...
-
-                <div class="col-sm-12 becomeMember text-center">To read the rest of the article, please<br>
-                    <a href="">JOIN SPE</a> or <a href="">Subscribe to OGF</a>
-                </div>
-
-
-            {% endif %}
-
-
-        </div>
-        <div class="col-sm-12 articleShares text-left">
+        <div class="col-sm-4 articleShares text-right">
             {% include 'include_article_shares.html' %}
         </div>
-
+        <div class="col-xs-12 dottedSpacer"></div>
     </div>
-    <div>
-        {# glenda wants the 3 most related topics articles #}
-        {% if topic_articles %}
-            <div class="row">
-                <hr class="tiletitlehr">
-                <h1 class="tiletitles">Related Articles</h1>
-            </div>
-            {% for article in topic_articles %}
-                <article class="tile whiteback story{% if not article.published %} unpublished{% endif %}{% if article.future %} future{% endif %}"
-                            style="min-height: 150px">
-                <a href="{{ article.get_absolute_url }}">
-                    <div class="story-wrap row">
-                        {% if article.picture and article.picture.url %}
-                            <figure class="thumb col-sm-6">
-            {#                    <div class="img-wrap"><img src="{{ article.picture.url }}" class="img-responsive"/></div>#}
-                                <div class="img-wrap detailImgWrapLeft" style="background-image: url({{ article.picture.url }})"></div>
-                            </figure>
-                            <div class="story-text col-sm-6">
-                        {% else %}
-                            <div class="story-text col-sm-12">
-                        {% endif %}
-                            <span class="pub-date">{{ article.date|date:"d F Y" }}
-                            {% if article.is_readable == True %}{# check if the article is locked or not and indicate #}
-                                | <span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>
-                            {% endif %}
-                            </span>
-                            <h3>{{ article.title }}</h3>
-                            {% if article.sponsored %}
-                            <p><span class="sponsored">SPONSORED</span></p>
-                            {% endif %}
-                            <p>{{ article.teaser }}</p>
-                        </div>
-                    </div>
-                </a>
-                </article>
-            {% endfor %}
+
+    {% if article.sponsored == True %}
+        <div class="col-sm-12 sponsored">SPONSORED</div>
+    {% endif %}
+
+{% if article.picture and article.picture.url %}
+    <div class="col-sm-12 articlePicture">
+        <img src="{{article.picture.url}}" alt="{{article.alternate}}" class="img-responsive">
+        {% if article.picture_attribution %}
+        <span class="imgattrib">{{ article.picture_attribution }}</span>
         {% endif %}
     </div>
+{% endif %}
+
+    <div class="col-sm-12 articleBodyText">
+
+
+        {% if article.is_readable == True %}
+
+            {% if article.show_paybox %}
+                <div class="col-sm-12 becomeMember text-center">
+                    <p>You have access to this full article to experience the outstanding content<br>
+                        that is available to OGF subscribers and SPE members.</p>
+                    <p>Please <a href="http://www.spe.org/join/">JOIN SPE</a> or <a href="http://www.spe.org/publications/subscribe.php">Subscribe to OGF</a><br>
+                    in order to gain full access to all that OGF has to offer.</p>
+            </div>
+            {% endif %}
+
+            {{ article.article_text | safe }}
+
+        {% else %}
+
+
+            {{ article.introduction | safe }}...
+
+            <div class="col-sm-12 becomeMember text-center">This article is reserved for SPE members and OGF subscribers.<br>
+                If you would like to continue reading,<br>
+                please <a href="https://www.spe.org/appssecured/login/servlet/LoginServlet">Login</a>, <a href="">JOIN SPE</a> or <a href="">Subscribe to OGF</a>
+            </div>
+
+
+        {% endif %}
+
+
+    </div>
+    <div class="col-sm-12 articleShares text-left">
+        {% include 'include_article_shares.html' %}
+    </div>
+
+</div>
+<div>
+    {# glenda wants the 3 most related topics articles #}
+    {% if topic_articles %}
+        <div class="row">
+            <hr class="tiletitlehr">
+            <h1 class="tiletitles">Related Articles</h1>
+        </div>
+        {% for article in topic_articles %}
+            <article class="tile whiteback story{% if not article.published %} unpublished{% endif %}{% if article.future %} future{% endif %}"
+                        style="min-height: 150px">
+            <a href="{{ article.get_absolute_url }}">
+                <div class="story-wrap row">
+                    {% if article.picture and article.picture.url %}
+                        <figure class="thumb col-sm-6">
+        {#                    <div class="img-wrap"><img src="{{ article.picture.url }}" class="img-responsive"/></div>#}
+                            <div class="img-wrap detailImgWrapLeft" style="background-image: url({{ article.picture.url }})"></div>
+                        </figure>
+                        <div class="story-text col-sm-6">
+                    {% else %}
+                        <div class="story-text col-sm-12">
+                    {% endif %}
+                        <span class="pub-date">{{ article.date|date:"d F Y" }}
+                        {% if article.is_readable == True %}{# check if the article is locked or not and indicate #}
+                            | <span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>
+                        {% endif %}
+                        </span>
+                        <h3>{{ article.title }}</h3>
+                        {% if article.sponsored %}
+                        <p><span class="sponsored">SPONSORED</span></p>
+                        {% endif %}
+                        <p>{{ article.teaser }}</p>
+                    </div>
+                </div>
+            </a>
+            </article>
+        {% endfor %}
+    {% endif %}
+</div>
